updated font sizes and fixed spacing

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -27,9 +27,9 @@ body {
 }
 
 
-.cardtitle p{
-    font-size: 4em;
-}
+/*.cardtitle p{*/
+/*    font-size: 4em;*/
+/*}*/
 
 .card{
     border: none;
